--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DefaultApiKey": "f91e0b219e96453d5578560f28786e37"
 }
