--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -6,5 +6,17 @@
     }
   },
   "AllowedHosts": "*",
-  "DefaultApiKey": "f91e0b219e96453d5578560f28786e37"
+  "DefaultApiKey": "f91e0b219e96453d5578560f28786e37",
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.File" ],
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/log-.txt",
+          "rollingInterval": "Day"
+        }
+      }
+    ]
+  }
 }
