move urls into config

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -7,6 +7,8 @@
   },
   "AllowedHosts": "*",
   "DefaultApiKey": "f91e0b219e96453d5578560f28786e37",
+  "CityLocationApiUrl" : "https://api.openweathermap.org/geo/1.0/direct",
+  "WeatherApiUrl" : "https://api.openweathermap.org/data/3.0/onecall",
   "Serilog": {
     "Using": [ "Serilog.Sinks.File" ],
     "WriteTo": [
