remove apikey from appsettings.json

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "DefaultApiKey": "f91e0b219e96453d5578560f28786e37",
+  "DefaultApiKey": "",
   "CityLocationApiUrl" : "https://api.openweathermap.org/geo/1.0/direct",
   "WeatherApiUrl" : "https://api.openweathermap.org/data/3.0/onecall",
   "Serilog": {
